# AtacWorks

./: Dockerfile  Dockerfile.README  Dockerfile.html  Dockerfile.md  LICENSE  README.md  bw2h5.py  calculate_baseline_metrics.py  calculate_qual_metrics.py  cmd_args.py  genindex.html  get_intervals.py  index.html  launch_ngc_job.json  launch_satv_job.json  main.py  model_args.py  objects.inv  peak2bw.py  peaksummary.py  postprocess.py  pretrained_models.md  readme.html  requirements-base.txt  requirements-macs2.txt  requirements-pip.txt  requirements.txt  run_docker.sh  run_training.sh  search.html  searchindex.js  setup.cfg  setup.py  tutorial1.md  worker.py
_sources/: index.rst.txt
atacworks/: __init__.py
atacworks/dl4atac/: custom_losses.py  dataset.py  evaluate.py  infer.py  losses.py  train.py  utils.py
atacworks/io/: bedgraphio.py  bedio.py  bw2h5.py  h5io.py  peak2bw.py
ci/checks/: check_copyright.py  style.sh
ci/common/: install-package.sh  logger.sh  (+3 more)
configs/: config_params.yaml  infer_config.yaml  model_structure.yaml  train_config.yaml
docs/: Dockerfile.md  advanced_usage.md  conf.py  index.rst  pretrained_models.rst
example/: run.sh
scripts/: bw2h5.py  calculate_baseline_metrics.py  cmd_args.py  get_intervals.py  main.py  peak2bw.py  peaksummary.py  run_inference.sh  run_training.sh  worker.py
tests/: pytest.ini  run_v0.1.sh  test_metrics.py
tutorials/: pretrained_models.html  pretrained_models.rst  rapids_examples.md  run_tutorial1.sh  tutorial1.html  tutorial1.ipynb  tutorial1.md  tutorial2.html  tutorial2.ipynb  tutorial2.md
(+111 files in other folders)
