# copyright (c) 2020, nvidia corporation.  all rights reserved.
# nvidia corporation and its licensors retain all intellectual property
# and proprietary rights in and to this software, related documentation
# and any modifications thereto.  any use, reproduction, disclosure or
# distribution of this software and related documentation without an express
# license agreement from nvidia corporation is strictly prohibited.
#

[metadata]
version = 0.3.1

